# kenobix

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  Makefile  README.md  noxfile.py  pyproject.toml  ruff.toml
.builds/: alpine.yml
benchmarks/: README.md  benchmark_complexity.py  benchmark_odm.py  benchmark_scale.py
docs/: api-reference.md  collections.md  config.md  index.html  index.md  odm-guide.md  odm.md  performance.md  relationships.md  transactions.md  webui.md
docs/dev/: acid-compliance.md  concurrency-tests.md  future-plans.md
examples/: collections_example.py  odm_example.py  relationships_example.py  transaction_examples.py
scripts/: check_concurrency.py
src/kenobi/: __init__.py  kenobix.py
src/kenobix/: __init__.py  cli.py  collection.py  fields.py  kenobix.py  odm.py
src/kenobix/backends/: postgres.py
src/kenobix/cli/: __init__.py  commands.py  dump.py  info.py  parser.py  schema.py
src/kenobix/webui/: app.py  config.py  server.py  state.py
tests/: conftest.py  test_acid_compliance.py  test_cli.py  test_collections.py  test_concurrency.py  test_kenobix.py  test_many_to_many.py  test_odm.py  test_odm_collections.py  test_related_set.py  test_relationships.py  test_transactions.py  test_webui.py
tests/a_unit/: test_dump_selectors.py  test_flatten.py  test_parser.py  test_type_inference.py
tests/b_integration/: test_backends.py  test_cli.py  test_dump.py  test_json_io.py  test_lookups.py  test_many_to_many.py  test_migrate.py  test_odm.py  test_related_set.py  test_transactions.py
tests/c_e2e/: test_webui_config.py
