[build-system]
requires = [
    "setuptools>=75.8.0",
    "wheel",
    "build",
]
build-backend = "setuptools.build_meta"

[project]
name = "kenobix"
dynamic = [
    "optional-dependencies",
]
version = "5.0.0"
requires-python = ">=3.9"
dependencies = [
    "cattrs>=25.3.0",
]
description = "High-performance document database with SQLite3 JSON optimization (15-665x faster than basic implementations). Based on KenobiDB by Harrison Erd."
readme = "README.md"

classifiers = [
    "Environment :: Console",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# https://peps.python.org/pep-0639/
license = {file = "LICENSE"}

authors = [
    {name = "Harrison Erd", email = "harrisonerd@gmail.com"},
]

maintainers = [
    {name = "KenobiX Contributors"},
]

[project.urls]
"Homepage" = "https://github.com/yourusername/kenobix"
"Source Code" = "https://github.com/yourusername/kenobix"
"Issue Tracker" = "https://github.com/yourusername/kenobix/issues"
"Original Project" = "https://github.com/patx/kenobi"

[tool.setuptools.packages.find]
where = ["src"]
include = ["kenobix*"]

[tool.setuptools.dynamic]
optional-dependencies.pip = { file = ['requirements/pip.lock'] }
optional-dependencies.dev = { file = ['requirements/dev.lock'] }
optional-dependencies.manage = { file = ['requirements/manage.lock'] }

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source_pkgs = ["kenobix"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@abc.abstractmethod",
    "@abc.abstractproperty",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
precision = 2
ignore_errors = true
skip_covered = true
skip_empty = true
fail_under = 88
show_missing = true

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "cattrs>=23.1.0",
    "ruff>=0.14.0",
    "pyrefly>=0.36.2",
    "nox>=2025.5.1",
]
