[project]
name = "kenobix"
version = "5.0.0"
requires-python = ">=3.11"
description = "Simple document database with SQLite3 JSON optimization, based on KenobiDB by Harrison Erd."
readme = "README.md"

classifiers = [
    "Environment :: Console",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# https://peps.python.org/pep-0639/
license = {file = "LICENSE"}

authors = [
    {name = "Harrison Erd", email = "harrisonerd@gmail.com"},
    {name = "Stefane Fermigier", email = "sf@fermigier.com"},
]

maintainers = [
    {name = "KenobiX Contributors"},
]

dependencies = [
    "cattrs>=25.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.14.0",
    "pyrefly>=0.36.2",
    "nox>=2025.5.1",
    "coverage>=7.10.7",
    "pytest-coverage>=0.0",
    "pre-commit>=4.3.0",
]

[project.urls]
"Homepage" = "https://github.com/abilian/kenobix"
"Source Code" = "https://github.com/abilian/kenobix"
"Issue Tracker" = "https://github.com/abilian/kenobix/issues"
"Original Project" = "https://github.com/patx/kenobi"

[build-system]
requires = ["uv-build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "kenobix"
module-root = "src"


#
# Pytest
#
[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source_pkgs = ["kenobix"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@abc.abstractmethod",
    "@abc.abstractproperty",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
precision = 2
ignore_errors = true
skip_covered = true
skip_empty = true
fail_under = 88
show_missing = true
